# tcg

./: Cargo.toml  README.md
src/: main.rs
templates/: cli.py  io.py
