[package]
name = "tcg"
version = "0.1.3"
edition = "2021"
description = "Competitive Programming Template Code Generator"
license = "MIT"
repository = "https://github.com/k4yp/tcg"
documentation = "https://docs.rs/crate/tcg/latest"
homepage = "https://github.com/k4yp/tcg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
